main div (almost) complete

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 /*---MAIN---*/
 .main {
     margin:  20px 40px;
-    padding: 40px;
+    padding: 30px 40px;
 	height: auto;
 	width: 520px;
 	background-color: white;
@@ -36,35 +36,40 @@ body {
 span {
     color: #F15E33; 
 }
+#why {
+    margin-top: 30px;
+    font-style: italic;
+    color: #44B2DE;
+}
+#why:hover {
+    text-decoration: underline; 
+}
 
-.input-donor {
-    display: flex;
+.main-buttons {
+    display: inline-block;
+    margin-top: 40px;
+}
+.main-buttons p {
+    font-size: 32px;
+}
+#donation {
+    width: 240px;
+    height: 100px;
     border: 1px solid #DCDCDC;
     border-radius: 6px;
+}
+#give {
     width: 240px;
     height: 100px;
-    margin: 20px;
-    margin-left: 0;
-}
-.input-donor p {
-    margin: auto 20px;
-    font-size: 32px;
-}
-
-.button-donor {
-    display:flex;
     border: 1px solid #01B21A;
     border-radius: 6px;
-    width: 240px;
-    height: 100px;
-    margin: 20px;
-    margin-right: 0;
+    float: right;
     background-color: #00BE1C;
-    
 }
-.button-donor p {
-
-    font-size: 32px;
+#give:hover {
+    background-color: #01B21A;
+}
+#give p {
     color: white;
+    text-align: center;
 }
-
