--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ p {
 .dialogue p {
     color: white;
     text-align: center;
+    vertical-align: middle;
+    line-height: 95px;
 }
 .dialogue::after {
 	content: "";
@@ -80,6 +82,11 @@ span {
     height: 100px;
     border: 1px solid #DCDCDC;
     border-radius: 6px;
+}
+#donation p {
+    vertical-align: middle;
+    line-height: 100px;
+    padding-left: 30px;
 }
 #donation span {
     color: black;
