--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@
 	margin: 0;
 	padding: 0;
 }
-
+:root {
+    --orange: #F15E33;
+    --grey-stroke: #DCDCDC;
+    --grey-shadow: #f4f4f4;
+    --grey-font: #707070;
+}
 html {
 	font-family: Helvetica, sans-serif;
 }
@@ -54,13 +59,13 @@ p {
 	width: 520px;
 	background-color: white;
 	border: 2px solid #DCDCDC;
-    box-shadow: 0px 5px 0px 0px rgba(244,244,244,1);
+    box-shadow: 0px 5px 0px 0px var(--grey-shadow);
 }
 .main p {
-    color: #707070;
+    color: var(--grey-font);
 }
 span {
-    color: #F15E33; 
+    color: var(--orange); 
 }
 #why {
     margin-top: 30px;
@@ -81,7 +86,7 @@ span {
 #donation {
     width: 240px;
     height: 100px;
-    border: 1px solid #DCDCDC;
+    border: 1px solid var(--grey-stroke);
     border-radius: 6px;
 }
 #donation p {
@@ -115,11 +120,11 @@ span {
 	height: 25px;
 	width: 600px;
 	background-color: #FAFAFA;
-	border: 2px solid #DCDCDC;
+	border: 2px solid var(--grey-stroke);
     border-bottom: 0px;
 }
 .progress {
-    background-color: #F15E33;
+    background-color: var(--orange);
     width: 75%;
     height: 25px;
 }
@@ -135,15 +140,15 @@ button {
     width: 280px;
     height: 80px;
     background-color: #FAFAFA;
-	border: 2px solid #DCDCDC;
+	border: 2px solid var(--grey-stroke);
     border-radius: 6px;
     font-size: 28px;
     font-weight: bold;
-    color: #707070;
-    box-shadow: 0px 3px 0px 0px #DCDCDC;
+    color: var(--grey-font);
+    box-shadow: 0px 3px 0px 0px var(--grey-stroke);
 }
 button:hover {
-    background-color: #DCDCDC;
+    background-color: var(--grey-stroke);
 }
 #save {
     float: left;
